функции/интерфейс для выбора бумаги

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     <form id="xCalc">
       <div class="col-paper" style="clear:left;"> 
         <div id="product-paper">
-          <a href="#" class="btn-more"></a>
+          <a href="javascript://" class="paper-header">Обложка</a>
+          <a href="javascript://" class="btn-more"></a>
           <div class="paper-block fancybox" data-fancybox-href="#paper-choose">
             <p>Офсетная бумага<br />
             <em>80 г/м<sup>2</sup></em></p>
@@ -106,7 +107,8 @@
         </div>
         <br />
         <div id="product-paper1" style="display:none;">
-          <a href="#" class="btn-more"></a>
+          <a href="javascript://" class="paper-header">Обложка</a>
+          <a href="javascript://" class="btn-more"></a>
           <div class="paper-block fancybox" data-fancybox-href="#paper1-choose">
             <p>Офсетная бумага<br />
             <em>80 г/м<sup>2</sup></em></p>
