--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
       </div>
       <div class="col-properties"></div>
       <div class="col-price"> <a href="#" class="btn-delete"></a>
-        <p class="price price-full">2970 <i>у</i></p>
-        <p class="price price-one">2,9 <i>у</i>/экз.
-        <p class="price-dogovor-txt"><span class="price price-dogovor">2 709 <i>у</i></span><br />
+        <p class="price price-full"></p>
+        <p class="price price-one"></p>
+        <p class="price-dogovor-txt"><span class="price price-dogovor"></span><br />
           при заключении <a href="#">договора</a></p>
-        <p class="summary">1000 экз. Формат А3, 1+1, офсетная бумага, 100г/м<sup>2</sup>. Срок исполнения — сутки.</p>
+        <p class="summary"></p>
         <a class="btn-send" href="#">Отправить заявку</a>
       </div>
     </form>
