Атрибут title не используется для всплывающей подсказки

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p class="price price-full"></p>
         <p class="price price-one"></p>
         <p class="price-dogovor-txt"><span class="price price-dogovor"></span><br />
-          при заключении <a href="#" id="dogovor-tooltip" title="Cкидка 20% если вы постоянно у нас печатаетесь или вы – рек­лам­ное агентство.">договора</a></p>
+          при заключении <a href="#" id="dogovor-tooltip">договора</a></p>
         <p class="summary"></p>
         <a class="btn-send" href="#">Отправить заявку</a>
       </div>
