--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     //  Калькулятор для первого продукта
     changeUI(first_product);
 
-		$(".fancybox, .paper-header, .btn-more").fancybox({
+		$(".fancybox, .paper-header a, .btn-more").fancybox({
 			 beforeShow : function() {
         var alt = this.element.find('img').attr('alt');
         this.inner.find('img').attr('alt', alt);
@@ -110,21 +110,19 @@
     <form id="xCalc">
       <div class="col-paper" style="clear:left;"> 
         <div id="product-paper">
-          <a href="javascript://" class="paper-header" data-fancybox-href="#paper-choose">Обложка</a>
-          <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
-          <div class="paper-block fancybox" data-fancybox-href="#paper-choose">
-            <p>Офсетная бумага<br />
-            <em>80 г/м<sup>2</sup></em></p>
-          </div>
+          <span class="paper-header">
+            <a href="javascript://" class="paper-header" data-fancybox-href="#paper-choose"></a>
+            <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
+          </span>
+          <div class="paper-block fancybox" data-fancybox-href="#paper-choose"><p></p></div>
         </div>
         <br />
         <div id="product-paper1" style="display:none;">
-          <a href="javascript://" class="paper-header" data-fancybox-href="#paper1-choose">Обложка</a>
-          <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
-          <div class="paper-block fancybox" data-fancybox-href="#paper1-choose">
-            <p>Офсетная бумага<br />
-            <em>80 г/м<sup>2</sup></em></p>
-          </div>
+          <span class="paper-header">
+            <a href="javascript://" class="paper-header" data-fancybox-href="#paper1-choose"></a>
+            <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
+          </span>
+          <div class="paper-block fancybox" data-fancybox-href="#paper1-choose"><p></p></div>
         </div>
       </div>
       <div class="col-properties"></div>
