--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="js/underscore-min.js"></script>
 <script type="text/javascript" src="js/jquery.tooltipster.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="js/bjqs-1.3.min.js"></script>
 
 <!-- Calc stuff -->
 <script src="js/calculator.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
+  var firstRun = 1;
 	$(document).ready(function() {
     //  xProducts хранится в calculator.js
     //  TODO: перевести, по возможности, в формат JSON
@@ -30,8 +32,9 @@
       //  Ссылка, при нажатии перерисовывет интерфейс с учетом выбранного продутка
       var a = $("<a>").attr({
         class: xProducts[p].aClass,
-        href: '#',
-        onclick: "changeUI('"+p+"');"
+        href: 'javascript://',
+        onclick: "changeUI('"+p+"');",
+        id: p+'-button'
       }).html(xProducts[p].title);
 
       //  Обертка для ссылки в виде элемента списка, по-умолчанию активен первый продукт
@@ -64,6 +67,11 @@
     $('#dogovor-tooltip').tooltipster({
       content: $("<span>Cкидка 20% если вы постоянно у нас печатаетесь или вы – рек­лам­ное агентство.<br><br>Подпишите с нами договор и если ваш сре­дне­ме­сяч­ный объём заказов пре­вышает 10 000 р. – вы по­лу­чите скидку 20%.</span>"),
       maxWidth: 200,
+      position: 'bottom',
+      theme: 'tooltipster-shadow'
+    });
+
+    $(".form-check-tooltip").tooltipster({
       position: 'bottom',
       theme: 'tooltipster-shadow'
     });
@@ -101,6 +109,40 @@
     </ul>
   </div>
 </div>
+<script type="text/javascript" charset="utf-8">
+  $(function () {
+    $("#banner-close").click(function(){$('#banner-wrap').hide();});
+    $('#my-slideshow').bjqs({
+      height : 210,
+      width : 1024,
+      animtype : 'slide',
+      nexttext : '',
+      prevtext : ''
+    });
+  })
+</script>
+<style type="text/css" media="screen">
+  #banner-wrap #slide-1, #banner-wrap #slide-2 {
+    background: url(../img/banner.jpg);
+  }
+</style>
+<div id="banner-wrap">
+  <div id="my-slideshow">
+    <ul class="bjqs">
+      <li id="slide-1">
+        <div class="txt">
+          Весь апрель<br /> 100 визиток за 100 рублей!
+        </div>
+      </li>
+      <li id="slide-2">
+        <div class="txt">
+          Весь март<br /> 100 визиток за 100 рублей!
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div id="banner-close"></div>
+</div>
 <div id="content">
   <div class="wrap page-main">
     <!-- Меню основных услуг/продуктов -->
@@ -112,16 +154,16 @@
         <div id="product-paper">
           <span class="paper-header">
             <a href="javascript://" class="paper-header" data-fancybox-href="#paper-choose"></a>
-            <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
           </span>
+          <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
           <div class="paper-block fancybox" data-fancybox-href="#paper-choose"><p></p></div>
         </div>
         <br />
         <div id="product-paper1" style="display:none;">
           <span class="paper-header">
             <a href="javascript://" class="paper-header" data-fancybox-href="#paper1-choose"></a>
-            <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
           </span>
+          <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
           <div class="paper-block fancybox" data-fancybox-href="#paper1-choose"><p></p></div>
         </div>
       </div>
