--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </script>
 <style type="text/css" media="screen">
   #banner-wrap #slide-1, #banner-wrap #slide-2 {
-    background: url(/img/banner.jpg);
+    background: url(img/banner.jpg);
   }
 </style>
 <div id="banner-wrap">
