телефоны в контактах убрал белила из "универсального расчета" подсказки для бумаги, через поле comments в xMedia убрал скролл до элементов калькулятора

--- a/index.html
+++ b/index.html
@@ -143,50 +143,53 @@
   </div>
   <div id="banner-close"></div>
 </div>
-<div id="content">
-  <div class="wrap page-main">
-    <!-- Меню основных услуг/продуктов -->
-    <ul id="menu-types"></ul>
-    <div class="empty"></div>
-    <!-- Элементы калькулятора -->
-    <form id="xCalc">
-      <div class="col-paper" style="clear:left;"> 
-        <div id="product-paper">
-          <span class="paper-header">
-            <a href="javascript://" class="paper-header" data-fancybox-href="#paper-choose"></a>
-          </span>
-          <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
-          <div class="paper-block fancybox" data-fancybox-href="#paper-choose"><p></p></div>
+<!-- <div class="stretched">   -->
+  <div id="content">
+    <div class="wrap page-main">
+      <!-- Меню основных услуг/продуктов -->
+      <ul id="menu-types"></ul>
+      <div class="empty"></div>
+      <!-- Элементы калькулятора -->
+      <form id="xCalc">
+        <div class="col-paper" style="clear:left;"> 
+          <div id="product-paper">
+            <span class="paper-header">
+              <a href="javascript://" class="paper-header" data-fancybox-href="#paper-choose"></a>
+            </span>
+            <a href="javascript://" class="btn-more" data-fancybox-href="#paper-choose"></a>
+            <div class="paper-block fancybox" data-fancybox-href="#paper-choose"><p></p></div>
+          </div>
+          <br />
+          <div id="product-paper1" style="display:none;">
+            <span class="paper-header">
+              <a href="javascript://" class="paper-header" data-fancybox-href="#paper1-choose"></a>
+            </span>
+            <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
+            <div class="paper-block fancybox" data-fancybox-href="#paper1-choose"><p></p></div>
+          </div>
         </div>
-        <br />
-        <div id="product-paper1" style="display:none;">
-          <span class="paper-header">
-            <a href="javascript://" class="paper-header" data-fancybox-href="#paper1-choose"></a>
-          </span>
-          <a href="javascript://" class="btn-more" data-fancybox-href="#paper1-choose"></a>
-          <div class="paper-block fancybox" data-fancybox-href="#paper1-choose"><p></p></div>
+        <div class="col-properties"></div>
+        <div class="col-price"> <!-- <a href="#" class="btn-delete"></a> -->
+          <p class="price price-full"></p>
+          <p class="price price-one"></p>
+          <p class="price-dogovor-txt"><span class="price price-dogovor"></span><br />
+            при заключении <a href="#" id="dogovor-tooltip">договора</a></p>
+          <p class="summary"></p>
+          <a class="btn-send" href="#">Отправить заявку</a>
         </div>
-      </div>
-      <div class="col-properties"></div>
-      <div class="col-price"> <a href="#" class="btn-delete"></a>
-        <p class="price price-full"></p>
-        <p class="price price-one"></p>
-        <p class="price-dogovor-txt"><span class="price price-dogovor"></span><br />
-          при заключении <a href="#" id="dogovor-tooltip">договора</a></p>
-        <p class="summary"></p>
-        <a class="btn-send" href="#">Отправить заявку</a>
-      </div>
-    </form>
-    <div class="empty"></div>
+      </form>
+      <div class="empty"></div>
+    </div>
   </div>
-</div>
+  <div id="footer">
+    <div class="wrap">
+      <div class="left"><a href="mailto:info@liteprint.me">info@liteprint.me</a></div>
+      <div class="right">Дизайн&nbsp;&#151; <a href="http://www.konfeta.me" target="_blank">Konfeta</a></div>
+    </div>
+  </div>
+<!-- </div> -->
 <div id="paper-choose"></div>
 <div id="paper1-choose"></div>
-<div id="footer">
-  <div class="wrap">
-    <div class="left"><a href="mailto:info@liteprint.me">info@liteprint.me</a></div>
-    <div class="right">Дизайн&nbsp;&#151; <a href="http://www.konfeta.me" target="_blank">Konfeta</a></div>
-  </div>
-</div>
+
 </body>
 </html>
