fixes for live site

--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
   })
 </script>
 <style type="text/css" media="screen">
-  #banner-wrap #slide-1, #banner-wrap #slide-2 {
+  #banner-wrap #slide-1 {
+    background: url(img/banner.jpg);
+  }
+  #banner-wrap #slide-2 {
     background: url(img/banner.jpg);
   }
 </style>
@@ -131,14 +134,14 @@
     <ul class="bjqs">
       <li id="slide-1">
         <div class="txt">
-          Весь апрель<br /> 100 визиток за 100 рублей!
+          Постоянная акция <br/>100 визиток за 100 рублей
         </div>
       </li>
-      <li id="slide-2">
+      <!-- <li id="slide-2">
         <div class="txt">
           Весь март<br /> 100 визиток за 100 рублей!
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
   <div id="banner-close"></div>
@@ -175,7 +178,7 @@
           <p class="price-dogovor-txt"><span class="price price-dogovor"></span><br />
             при заключении <a href="#" id="dogovor-tooltip">договора</a></p>
           <p class="summary"></p>
-          <a class="btn-send" href="#">Отправить заявку</a>
+          <!-- <a class="btn-send" href="#">Отправить заявку</a> -->
         </div>
       </form>
       <div class="empty"></div>
